fix overflow header bug

--- a/app/css/it-styles.css
+++ b/app/css/it-styles.css
@@ -584,9 +584,10 @@ h1, h2, h3, h4, h5, h6 {
   position: absolute;
   bottom: 0;
   z-index: 999;
+  overflow: hidden;
 }
 
-/* line 44, /Users/markdurrant/repos/pebble-sites/app/sass/_header.scss */
+/* line 45, /Users/markdurrant/repos/pebble-sites/app/sass/_header.scss */
 .site-logo {
   padding: 9px 6px 8px;
   height: 100%;
@@ -594,7 +595,7 @@ h1, h2, h3, h4, h5, h6 {
   transition: -webkit-transform .3s, background .3s;
 }
 
-/* line 51, /Users/markdurrant/repos/pebble-sites/app/sass/_header.scss */
+/* line 52, /Users/markdurrant/repos/pebble-sites/app/sass/_header.scss */
 .site-logo-flip {
   padding: 9px 6px 8px;
   height: 100%;
@@ -606,7 +607,7 @@ h1, h2, h3, h4, h5, h6 {
   left: 0;
 }
 
-/* line 62, /Users/markdurrant/repos/pebble-sites/app/sass/_header.scss */
+/* line 63, /Users/markdurrant/repos/pebble-sites/app/sass/_header.scss */
 .nav-btn {
   text-indent: -99999px;
   height: 40px;
@@ -618,16 +619,16 @@ h1, h2, h3, h4, h5, h6 {
   z-index: 999;
   background: url("../img/menu-btn.svg") no-repeat 7px 7px;
 }
-/* line 73, /Users/markdurrant/repos/pebble-sites/app/sass/_header.scss */
+/* line 74, /Users/markdurrant/repos/pebble-sites/app/sass/_header.scss */
 .nav-btn:hover {
   background-color: #0099e6;
 }
-/* line 77, /Users/markdurrant/repos/pebble-sites/app/sass/_header.scss */
+/* line 78, /Users/markdurrant/repos/pebble-sites/app/sass/_header.scss */
 .nav-btn:focus {
   outline: none;
 }
 
-/* line 84, /Users/markdurrant/repos/pebble-sites/app/sass/_header.scss */
+/* line 85, /Users/markdurrant/repos/pebble-sites/app/sass/_header.scss */
 .site-nav ul {
   position: absolute;
   top: -120px;
@@ -635,22 +636,22 @@ h1, h2, h3, h4, h5, h6 {
   width: 100%;
   padding-top: 5px;
 }
-/* line 92, /Users/markdurrant/repos/pebble-sites/app/sass/_header.scss */
+/* line 93, /Users/markdurrant/repos/pebble-sites/app/sass/_header.scss */
 .site-nav li {
   position: relative;
   transition: left .20s .075s;
   left: 100%;
   height: 37px;
 }
-/* line 98, /Users/markdurrant/repos/pebble-sites/app/sass/_header.scss */
+/* line 99, /Users/markdurrant/repos/pebble-sites/app/sass/_header.scss */
 .site-nav li:nth-child(2) {
   transition: left .20s .125s;
 }
-/* line 102, /Users/markdurrant/repos/pebble-sites/app/sass/_header.scss */
+/* line 103, /Users/markdurrant/repos/pebble-sites/app/sass/_header.scss */
 .site-nav li:nth-child(3) {
   transition: left .20s .2s;
 }
-/* line 107, /Users/markdurrant/repos/pebble-sites/app/sass/_header.scss */
+/* line 108, /Users/markdurrant/repos/pebble-sites/app/sass/_header.scss */
 .site-nav a {
   color: white;
   text-decoration: none;
@@ -664,11 +665,11 @@ h1, h2, h3, h4, h5, h6 {
   right: 6px;
 }
 
-/* line 122, /Users/markdurrant/repos/pebble-sites/app/sass/_header.scss */
+/* line 123, /Users/markdurrant/repos/pebble-sites/app/sass/_header.scss */
 .site-header.expanded .site-nav ul {
   top: 0;
 }
-/* line 126, /Users/markdurrant/repos/pebble-sites/app/sass/_header.scss */
+/* line 127, /Users/markdurrant/repos/pebble-sites/app/sass/_header.scss */
 .site-header.expanded .site-nav li {
   left: 0;
 }
