--- a/app/sass/_header.scss
+++ b/app/sass/_header.scss
@@ -39,6 +39,7 @@
   position: absolute;
   bottom: 0;
   z-index: 999;
+  overflow: hidden;
 }
 
 .site-logo{
